cmake: Move SoundTouch detection to Externals

--- a/Externals/soundtouch/CMakeLists.txt
+++ b/Externals/soundtouch/CMakeLists.txt
@@ -1,3 +1,14 @@
+find_package(SoundTouch QUIET)
+if(SOUNDTOUCH_FOUND)
+  message(STATUS "Using shared soundtouch")
+  add_library(External_SoundTouch INTERFACE)
+  add_library(External::SoundTouch ALIAS External_SoundTouch)
+  target_link_libraries(External_SoundTouch INTERFACE SoundTouch::SoundTouch)
+  return()
+endif()
+
+message(STATUS "Using static soundtouch from Externals")
+
 set(SRCS
 	AAFilter.cpp
 	BPMDetect.cpp
@@ -16,4 +27,6 @@ set(SRCS
 	)
 
 add_library(SoundTouch STATIC ${SRCS})
-add_definitions(-w)
+add_library(External::SoundTouch ALIAS SoundTouch)
+target_compile_options(SoundTouch PRIVATE -w)
+target_include_directories(SoundTouch PUBLIC ..)
