--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -21,7 +21,7 @@ add_definitions(-D__STDC_CONSTANT_MACROS)
 
 macro(add_dolphin_library lib srcs libs)
 	add_library(${lib} STATIC ${srcs})
-	target_link_libraries(${lib} PUBLIC ${libs})
+	target_link_libraries(${lib} PRIVATE ${libs})
 endmacro()
 
 add_subdirectory(Core)
