--- a/Source/Core/AudioCommon/CMakeLists.txt
+++ b/Source/Core/AudioCommon/CMakeLists.txt
@@ -34,7 +34,8 @@ if(ENABLE_AO)
   if(AO_FOUND)
     message(STATUS "ao found, enabling ao sound backend")
     target_sources(audiocommon PRIVATE AOSoundStream.cpp)
-    target_link_libraries(audiocommon PRIVATE AO::AO)
+    target_include_directories(audiocommon PRIVATE ${AO_INCLUDE_DIR})
+    #target_link_libraries(audiocommon PRIVATE AO::AO)
     target_compile_definitions(audiocommon PRIVATE HAVE_AO=1)
   else()
     message(STATUS "ao NOT found, disabling ao sound backend")
